--- a/src/styles/components/_editor.css
+++ b/src/styles/components/_editor.css
@@ -7,7 +7,10 @@
     overflow: auto;
 }
 
+/*
 .textarea-editor {
+    flex: 1;
+    box-sizing: border-box;
     grid-row: 4;
     height: 100%;
     min-height: 50px;
@@ -16,7 +19,7 @@
     background-color: var(--panel-bg);
     color: var(--text-primary);
     border-color: var(--textarea-border);
-}
+}*/
 
 .tox-tinymce {
     border: none !important;
